traffic-splitting/sample.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  name: stock-route-example
  namespace: myproject
spec:
  traffic:
  - configurationName: stock-configuration-example
    percent: 100
